重构: 重构User对象, 添加一部分测试